@@ -18,8 +18,9 @@
 import org.apache.commons.io.FileUtils
 import sbt._
 import Keys._
+import coursier.Keys._
 
-import scala.util.Properties
+import scala.util.{Try, Properties}
 
 object Common {
   //  Parameters for publishing to artifact repositories
@@ -50,6 +51,10 @@ object Common {
     "org.scalatest" %% "scalatest" % "2.2.0" % "test", // Apache v2
     "org.scalactic" %% "scalactic" % "2.2.0" % "test", // Apache v2
     "org.mockito" % "mockito-all" % "1.9.5" % "test"   // MIT
+  )
+
+  private val buildResolvers = Seq(
+    "Typesafe repository" at "http://repo.typesafe.com/typesafe/releases/"
   )
 
   // The prefix used for our custom artifact names
@@ -83,6 +88,18 @@ object Common {
     scalaVersion := buildScalaVersion,
     libraryDependencies ++= buildLibraryDependencies,
     isSnapshot := snapshot,
+    resolvers ++= buildResolvers,
+    coursierVerbosity := {
+      val level = Try(Integer.valueOf(Properties.envOrElse(
+        "TOREE_RESOLUTION_VERBOSITY", "1")
+      ).toInt).getOrElse(1)
+
+      scala.Console.out.println(
+        s"[INFO] Toree Resolution Verbosity Level = $level"
+      )
+
+      level
+    },
 
     scalacOptions in (Compile, doc) ++= Seq(
       // Ignore packages (for Scaladoc) not from our project
@@ -98,17 +115,31 @@ object Common {
       //"-Xlint", // Scala 2.11.x only
       "-Xfatal-warnings",
       "-Ywarn-all",
-      "-language:reflectiveCalls"
+      "-language:reflectiveCalls",
+      "-target:jvm-1.6"
     ),
 
     // Java-based options for compilation (all tasks)
-    javacOptions in Compile ++= Seq(""),
+    // NOTE: Providing a blank flag causes failures, only uncomment with options
+    //javacOptions in Compile ++= Seq(""),
 
     // Java-based options for just the compile task
     javacOptions in (Compile, compile) ++= Seq(
       "-Xlint:all",   // Enable all Java-based warnings
       "-Xlint:-path", // Suppress path warnings since we get tons of them
-      "-Werror"       // Treat warnings as errors
+      "-Xlint:-options",
+      "-Xlint:-processing",
+      "-Werror",       // Treat warnings as errors
+      "-source", "1.6",
+      "-target", "1.6"
+    ),
+
+    // Options provided to forked JVMs through sbt, based on our .jvmopts file
+    javaOptions ++= Seq(
+      "-Xms1024M", "-Xmx4096M", "-Xss2m", "-XX:MaxPermSize=1024M",
+      "-XX:ReservedCodeCacheSize=256M", "-XX:+TieredCompilation",
+      "-XX:+CMSPermGenSweepingEnabled", "-XX:+CMSClassUnloadingEnabled",
+      "-XX:+UseConcMarkSweepGC", "-XX:+HeapDumpOnOutOfMemoryError"
     ),
 
     // Add additional test option to show time taken per test
@@ -125,19 +156,9 @@ object Common {
 
     credentials += Credentials("Sonatype Nexus Repository Manager", repoHost, repoUsername, repoPassword),
 
-    // Change destination of local delivery (building ivy.xml) to have *-ivy.xml
-    deliverLocalConfiguration := {
-      val newDestinationPath = crossTarget.value / s"${name.value}-ivy.xml"
-      val dlc = deliverLocalConfiguration.value
-      new DeliverConfiguration(
-        newDestinationPath.absolutePath, dlc.status,
-        dlc.configurations, dlc.logging)
-    },
-
     // Add rebuild ivy xml to the following tasks
     compile <<= (compile in Compile) dependsOn (rebuildIvyXml dependsOn deliverLocal)
   ) ++ rebuildIvyXmlSettings // Include our rebuild ivy xml settings
-
 
   buildLibraryDependencies ++= Seq( "org.apache.spark" %% "spark-core" % sparkVersion  % "provided" excludeAll( // Apache v2
 
@@ -169,7 +190,7 @@ object Common {
   lazy val rebuildIvyXmlSettings = Seq(
     rebuildIvyXml := {
       val s: TaskStreams = streams.value
-      val inputFile = (crossTarget.value / s"${name.value}-ivy.xml").getAbsoluteFile
+      val inputFile = (crossTarget.value / s"ivy-${version.value}.xml").getAbsoluteFile
       val outputFile =
         ((resourceDirectory in Compile).value / s"${name.value}-ivy.xml").getAbsoluteFile
       s.log.info(s"Copying ${inputFile.getPath} to ${outputFile.getPath}")
